# femboy-downloader

./: .gitignore  README.md  femboy-downloader.flatpak  flatpak-pip-generator.py  meson.build  moe.wawa.femboydownloader.json  python3-modules.json  python3-requests.json
data/: femboydownloader.desktop  main.ui  meson.build  preferences.ui
response/: response.json
settings/: settings.json
src/: buttons.py  femboydownloader.in  main.py  meson.build  reddit.py  settings.py  test.py  tools.py
ui/: main.ui  meson.build
