project('catgirldownloader',
          version: '0.0.1',
    meson_version: '>= 0.59.0',
  default_options: [ 'warning_level=2', 'werror=false', ],
)

subdir('src')
subdir('ui')

# Will be useful when an icon and a desktop file are added
# Also see meson.build in ui
#gnome.post_install(
#    gtk_update_icon_cache: true,
#    update_desktop_database: true,
#)
